examples/test/testpolicy18223.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18223
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key27: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value25
      podSelector:
        matchLabels:
          key24: value48
          key14: value40
          key28: value34
